# cpp_sandbox

./: .gitignore  BUILD.gn  README.md
TextQuery/: BUILD.gn  TextQuery.cpp  TextQuery.h  main.cpp  test.txt
TextQuery/list/: build.ninja  environment_arm64_uwp  environment_arm_uwp  environment_x64  environment_x64_uwp  environment_x86  environment_x86_uwp  toolchain.ninja
TextQuery/main/: BUILD.gn  TextQuery.cpp  TextQuery.h  main.cpp  test.txt
allocator/: BUILD.gn  allocator_test.cpp
complex/: BUILD.gn  complex.h  complex_ref.h  complex_template.h  complex_template_x.h  dcomplex.h  fcomplex.h  ldcomplex.h  main.cpp  main_ref.cpp  main_template.cpp  main_template_x.cpp
ctor_dtor/: BUILD.gn  main.cpp
designPattern/: BUILD.gn
designPattern/TemplateMethod/: BUILD.gn  game.cpp
designPattern/builder/: BUILD.gn  fluentBuilder.cpp  innerBuilder.cpp  person.cpp  simpleBuilder.cpp
designPattern/command/: BUILD.gn  cmd_app_fw_factory_singleton.cpp  cmd_app_fw_factory_singleton_MVC.cpp  command.cpp  command_app_framework.cpp  command_app_fw_factory.cpp  command_bank.cpp
designPattern/factory/: BUILD.gn  main.cpp  main_hotdrink.cpp  main_inner.cpp  main_shape.cpp
designPattern/strategy/: BUILD.gn  dynamic.cpp  layout.cpp  quote.txt  static.cpp
exercise/: BUILD.gn
exercise/0001/: BUILD.gn  main.cpp
exercise/0002/: BUILD.gn  main.cpp
exercise/0003/: BUILD.gn  main.cpp
polymorphism/: BUILD.gn  main.cpp  without.cpp
ref_count/: BUILD.gn  RCObject.cpp  RCObject.h  String.h  main.cpp
rvalue_ref/: BUILD.gn  mystring.cpp
test_rvo/: BUILD.gn  RVO.cpp  build.sh  main.cpp  noRVO.cpp  throw_exception.cpp  with_rvalue_reference.cpp  without_rvalue_reference.cpp
tests/: BUILD.gn  bind_test.cpp  callback_test.cpp  cpu_test.cpp  function_test.cpp  move_test.cpp  placeholder_test.cpp
thread/: BUILD.gn  thread_lamda.cpp  thread_multi_mutex.cpp  thread_mutex.cpp  thread_non_static.cpp  thread_static.cpp  thread_trylock.cpp
unorderedMap/: BUILD.gn  UnorderedMapObjectAsKey.cpp  main.cpp
variadic/: BUILD.gn  build.sh  test01.cpp  test01.ll  test02.cpp  test03.cpp  tuple_test.cpp  variadic_test.cpp
