group("executable") {
    deps = [ 
              "//TextQuery",
              "//test_rvo:main",
              "//test_rvo:RVO",
              "//test_rvo:noRVO",
              "//test_rvo:throw_exception",
              "//complex:complex_main",
              "//complex:complex_ref_main",
              "//complex:complex_template_main",
              "//complex:complex_template_x_main",
              "//ref_count:ref_count_string",
              "//ref_count:RC_obj_test",
              "//ctor_dtor:simple_ctor_dtor",
              "//polymorphism:shape_polymorphism",
              "//unorderedMap:UnorderedMapObjectAsKey",
              "//unorderedMap:20210601_test",
              "//tests:cpu_test",
              "//variadic:variadic_test",
              "//variadic:tuple_test",
              "//rvalue_ref:mystring_test",
              "//allocator:allocator_test",
          ]
    if (is_win) {
        deps -=  ["//ref_count:ref_count_string",
                   "//ref_count:RC_obj_test", 
                ]
    }
}
