executable("complex_main") {
  sources = [
    "main.cpp",
  ]

  cflags_cc = [ "-std=c++11", ]
  
  include_dirs = [ "//", "//complex" ]
}

executable("complex_ref_main") {
  sources = [
    "main_ref.cpp",
  ]

  cflags_cc = [ "-std=c++11", ]
  
  include_dirs = [ "//", "//complex" ]
}

executable("complex_template_main") {
  sources = [
    "main_template.cpp",
  ]

  cflags_cc = [ "-std=c++11", ]
  
  include_dirs = [ "//", "//complex" ]
}