group("designPatterns") {
  deps = [ 
    "//designPattern/TemplateMethod:test_templateMethod",
    "//designPattern/strategy:test_strategy_dynamic",
    "//designPattern/strategy:test_strategy_static",
    "//designPattern/command:test_ace_command",
    "//designPattern/command:test_bank_command",
    "//designPattern/command:test_app_framework_command",
    "//designPattern/command:test_command_app_fw_factory",
    "//designPattern/command:test_cmd_app_fw_factory_singleton",
    "//designPattern/command:test_cmd_app_fw_factory_singleton_MVC",
  ]
}