executable("test_simpleBuilder") {
  sources = [
    "simpleBuilder.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/builder" ]
}

executable("test_innerBuilder") {
  sources = [
    "innerBuilder.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/builder" ]
}

executable("test_fluentBuilder") {
  sources = [
    "fluentBuilder.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/builder" ]
}

executable("test_personBuilder") {
  sources = [
    "person.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/builder" ]
}
