executable("test_ace_command") {
  sources = [
    "command.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/command" ]
}

executable("test_bank_command") {
  sources = [
    "command_bank.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/command" ]
}

executable("test_app_framework_command") {
  sources = [
    "command_app_framework.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/command" ]
}

executable("test_command_app_fw_factory") {
  sources = [
    "command_app_fw_factory.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/command" ]
}