executable("test_abstractFactory") {
  sources = [
    "main.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/factory" ]
}

executable("test_af_shape") {
  sources = [
    "main_shape.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/factory" ]
}

executable("test_af_hotdrink") {
  sources = [
    "main_hotdrink.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/factory" ]
}

executable("test_innerAbstractFactory") {
  sources = [
    "main_inner.cpp",
  ]

  cflags_cc = [ "-std=c++14" ]
  
  include_dirs = [ "//", "//designPattern/factory" ]
}
